added input box for data querying

--- a/food-oracle/src/index.html
+++ b/food-oracle/src/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1 id="indexTitle">Welcome to Food Oracle!</h1>
+    <div id="queryInput">
+        <input id="inputLookUp" placeholder="Look-up food item...">
+    </div>
 
     <script src="script.js"></script>
 </body>
